#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package XtcInput
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-06-00
2012-07-12 Andy Salnikov
- live reading implementation more or less complete, simple tests run OK

Tag: V00-05-02
2012-07-10 Andy Salnikov
- forgot to update unit test for new MergeMode enums

Tag: V00-05-01
2012-07-09 Andy Salnikov
- mergeMode() method also accepts "old" enum names

Tag: V00-05-00
2012-07-09 Andy Salnikov
- a bit of redesign, split iterators into iterators over datagrams
  and iterators over files
- iteration over files has two implementation, first is based on static 
  list of input files as before, second uses database as the source of 
  live data; second implementation is not tested yet

Tag: V00-04-01
2012-06-22 Andy Salnikov
- forgot to update tests to use new class names

Tag: V00-04-00
2012-06-22 Andy Salnikov
- renamed XtcDgIterator class into XtcChunkDgIter, XtcDechunk into
  XtcStreamDgIter
- updated comments in few places

Tag: V00-03-01
2012-06-21 Andy Salnikov
- implementing live mode for XtcDgIterator
- new test app test/XtcDgIteratorTest.cpp

Tag: V00-03-00
2012-06-20 Andy Salnikov
- updated XtcDgIterator to use unbuffered IO, first step to support
  reading live data

Tag: V00-02-02
2012-06-19 Andy Salnikov
- XtcFileName gets a constructor which takes experiemnt id, run number,
  stream and chunk numbers
- added also unit tests for the above constructor
- XtcDgIterator::next allocates minimum necessary space for datagram,
  not maximum allowed size

Tag: V00-02-01
2012-03-05 Andy Salnikov
- adding XtcFilter classes to filter datagram contents, right now only
  one filtering option exists (XtcFilterTypeId class) based on TypeId

Tag: V00-02-00